@startuml
skinparam classAttributeIconSize 0




abstract class Level {

    +{abstract} void initLevel()
    +otherMethods()


}

interface Rain {
  +rain()
}

interface UnderWater {
  +underwater()
}



interface Dark {
 +dark()
}

interface Sunny {
 +sunny()
}

interface Cloudy {
 +cloudy()
}

class MountainLevel {
+initLevel()

}


class SkyLevel {
 +initLevel()

}

class ForestLevel{
+initLevel()
}

class CaveLevel{
+initLevel()
}

class UnderwaterLevel{
+initLevel()
}

note "SkyLevel and MountainLevel implement the same methods" as N2
MountainLevel . N2
N2 . SkyLevel

Level <|--- UnderwaterLevel
Level <|--- CaveLevel
Level <|--- SkyLevel
Level <|--- ForestLevel
Level <|--- MountainLevel

Cloudy <|-.- SkyLevel
Sunny <|-.- SkyLevel
Sunny <|-.- UnderwaterLevel
UnderWater <|-.- UnderwaterLevel
Dark <|-.- ForestLevel
Dark <|-.- CaveLevel
Cloudy <|-.- MountainLevel
Rain <|-.- ForestLevel
Sunny <|-.- MountainLevel








@enduml